--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <maven.compiler.target>24</maven.compiler.target>
         <java.version>24</java.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
+        <sonar.organization>arslankucukkafa</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
 
