--- a/fun-eureka-service/pom.xml
+++ b/fun-eureka-service/pom.xml
@@ -2,26 +2,38 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
     <groupId>com.arslankucukkafa.dev</groupId>
-    <artifactId>fun-services</artifactId>
+    <artifactId>fun-eureka-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <name>ffun-eureka-service</name>
+    <description>fun-eureka-service</description>
 
-    <modules>
-        <module>fun-config-service</module>
-        <module>fun-eureka-service</module>
-        <module>fun-gateway-service</module>
-    </modules>
+    <properties>
+        <java.version>24</java.version>
+        <spring-cloud.version>2024.0.1</spring-cloud.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -33,17 +45,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-
-    <properties>
-        <maven.compiler.source>24</maven.compiler.source>
-        <maven.compiler.target>24</maven.compiler.target>
-        <java.version>24</java.version>
-        <spring-cloud.version>2024.0.1</spring-cloud.version>
-        <sonar.organization>arslankucukkafa</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    </properties>
-
 
     <build>
         <plugins>
