--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,65 @@
-name: SonarQube
+name: Build Microservices
+
 on:
   push:
     branches:
       - main
-  pull_request:
-    types: [opened, synchronize, reopened]
+
 jobs:
-  build:
-    name: Build and analyze
+  detect-changes:
+    name: Detect Service Changes
+    runs-on: ubuntu-latest
+    outputs:
+      config: ${{ steps.check.outputs.config }}
+      gateway: ${{ steps.check.outputs.gateway }}
+      eureka: ${{ steps.check.outputs.eureka }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Detect changed folders
+        id: check
+        run: |
+          git fetch origin ${{ github.event.before }}
+
+          CONFIG_CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^fun-config-service/' | wc -l)
+          GATEWAY_CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^fun-gateway-service/' | wc -l)
+          EUREKA_CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^fun-eureka-service/' | wc -l)
+
+          echo "config=$CONFIG_CHANGED" >> $GITHUB_OUTPUT
+          echo "gateway=$GATEWAY_CHANGED" >> $GITHUB_OUTPUT
+          echo "eureka=$EUREKA_CHANGED" >> $GITHUB_OUTPUT
+
+  fun-config-service:
+    name: Build Config Service
+    needs: detect-changes
+    if: needs.detect-changes.outputs.config != '0'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 24
-        uses: actions/setup-java@v4
-        with:
-          java-version: 24
-          distribution: 'zulu' # Alternative distribution options are available.
-      - name: Cache SonarQube packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ArslanKucukkafa_fun-services
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build Config Service
+        run: echo "Running build for fun-config-service"
+        # buraya gerçek build adımlarını ekleyebilirsin (mvn clean install vs.)
+
+  fun-gateway-service:
+    name: Build Gateway Service
+    needs: detect-changes
+    if: needs.detect-changes.outputs.gateway != '0'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build Gateway Service
+        run: echo "Running build for fun-gateway-service"
+
+  fun-eureka-service:
+    name: Build Eureka Service
+    needs: detect-changes
+    if: needs.detect-changes.outputs.eureka != '0'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build Eureka Service
+        run: echo "Running build for fun-eureka-service"
