--- a/fun-config-service/pom.xml
+++ b/fun-config-service/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.arslankucukkafa.dev</groupId>
+        <artifactId>fun-services</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
+
     <groupId>com.arslankucukkafa.dev</groupId>
     <artifactId>fun-config-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
