--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>fun-config-service</module>
         <module>fun-eureka-service</module>
         <module>fun-gateway-service</module>
+        <module>fun-auth-service</module>
     </modules>
 
     <dependencyManagement>
