--- a/.github/workflows/fun-gateway-service.yml
+++ b/.github/workflows/fun-gateway-service.yml
@@ -1,14 +1,14 @@
-name: Gateway Service Test
+name: Gateway Service Build Test
 
 on:
-  workflow_dispatch:
+  workflow_call:
 
 jobs:
-  hello-world:
+  build-gateway-service:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Print Hello World
-        run: echo "Hello from fun-gateway-service!"
+      - name: Build Gateway Service
+        run: echo "Running build for fun-gateway-service"
