--- a/.github/workflows/fun-config-service.yml
+++ b/.github/workflows/fun-config-service.yml
@@ -1,14 +1,14 @@
-name: Config Service Test
+name: Config Service Build
 
 on:
-  workflow_dispatch:
+  workflow_call:
 
 jobs:
-  hello-world:
+  build-config-service:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Print Hello World
-        run: echo "Hello from fun-config-service!"
+      - name: Build Config Service
+        run: echo "Running build for fun-config-service"
