--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,6 @@ jobs:
       - name: Detect changed folders
         id: check
         run: |
-          # Eski commit geçerli mi kontrol et
           if ! git rev-parse --verify ${{ github.event.before }} >/dev/null 2>&1; then
             echo "Eski commit bulunamadı, tüm dosyaları değişmiş say."
             CONFIG_CHANGED=1
@@ -30,11 +29,12 @@ jobs:
             EUREKA_CHANGED=1
             AUTH_CHANGED=1
           else
-            CONFIG_CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -c '^fun-config-service/')
-            GATEWAY_CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -c '^fun-gateway-service/')
-            EUREKA_CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -c '^fun-eureka-service/')
-            AUTH_CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -c '^fun-auth-service/')
+            CONFIG_CHANGED=$(git diff --name-only 7de859cb4867245a139c26e898b3baff3de8e42a 4b0139714daf3579bb29e0613a1a30aa9a928e5a | grep -c '^fun-config-service/')
+            GATEWAY_CHANGED=$(git diff --name-only 7de859cb4867245a139c26e898b3baff3de8e42a 4b0139714daf3579bb29e0613a1a30aa9a928e5a | grep -c '^fun-gateway-service/')
+            EUREKA_CHANGED=$(git diff --name-only 7de859cb4867245a139c26e898b3baff3de8e42a 4b0139714daf3579bb29e0613a1a30aa9a928e5a | grep -c '^fun-eureka-service/')
+            AUTH_CHANGED=$(git diff --name-only 7de859cb4867245a139c26e898b3baff3de8e42a 4b0139714daf3579bb29e0613a1a30aa9a928e5a | grep -c '^fun-auth-service/')
           fi
+  
           echo "config=$CONFIG_CHANGED" >> $GITHUB_OUTPUT
           echo "gateway=$GATEWAY_CHANGED" >> $GITHUB_OUTPUT
           echo "eureka=$EUREKA_CHANGED" >> $GITHUB_OUTPUT
